--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "jquery-bbq",
+  "version": "1.3pre",
   "description": "Ben Alman's jQuery BBQ: Back Button & Query Library",
   "main": "dist/jquery.ba-bbq.js",
   "files": [
@@ -10,6 +11,6 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Reload-Lab/jquery-ba-bbq.git"
+    "url": "git+https://github.com/Reload-Lab/jquery-bbq.git"
   }
 }
